--- a/index.html
+++ b/index.html
@@ -27,6 +27,23 @@
         </nav>
     </header>
     <main>
+
+
+
+        <section id="categories">
+            <div class="tit"><h5>Categorías</h5></div>
+            <div class="cat">
+        <div class="category"><img src="./accets/image 34 (1).png" alt="pizza">Pizzas<div class="piz-barr"></div></div>
+        <div class="category"><img src="./accets/burger 1.png" alt="hamburguesa">Hamburguesas<div class="hamb-barr"></div> </div>
+        <div class="category"><img src="./accets/fries 2.png" alt="papas">Napapuki<div class="pap-barr"></div></div>
+        <div class="category"><img src="./accets/pizza 2.png" alt="individuales">Individuales<div class="ind-barr"></div></div>
+        <div class="category"><img src="./accets/buritto 1.png" alt="burrito">Wraps<div class="burr-barr"></div></div>
+        <div class="category"><img src="./accets/taco 1.png" alt="tacos">Mexican Food<div class="tac-barr"></div></div>
+        <div class="category"><img src="./accets/float 1.png" alt="Batidukis">Batidukis<div class="bat-barr"></div></div>
+        </div>
+        </section>
+
+
     </main>
     <footer>
         <div>
